--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -28,7 +28,7 @@
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 4 - `components/`
 \* ========================================================================== */
-@import 'components/box';
+@import 'components/containers';
 @import 'components/card';
 @import 'components/switch';
 @import 'components/mobile-menu';
