--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -8,7 +8,7 @@
 
 .header {
   // ...
-  &__container {
+  &__flex-container {
     // ...
   }
 
@@ -57,8 +57,9 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  &__container {
-    height: 100%;
+  &__flex-container {
+    // height: 100%;
+    // max-height: 100vh;
     justify-content: center;
     background-image: linear-gradient(
       45deg,
@@ -89,13 +90,16 @@
 \* -------------------------------------------------------------------------- */
 
 .hot-items {
-  // ...
+  display: flex;
+  place-content: center;
+  place-items: center;
+  place-self: center; // ...
 
   &__title {
     // ...
   }
 
-  &__container {
+  &__flex-container {
     // ...
   }
 
@@ -135,7 +139,7 @@
 .about {
   // ...
 
-  &__container {
+  &__flex-container {
     // ...
   }
 }
@@ -147,9 +151,7 @@
 .footer {
   // ...
 
-  &__container {
-    @include flex-container(nowrap, column, flex-start, center);
-
+  &__flex-container {
     // ...
   }
 }
