--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -99,6 +99,10 @@ figcaption {
 
 // #  <li>
 
+li {
+  list-style-type: none;
+}
+
 // #  <p>
 
 /* -------------------------------------------------------------------------- *\
@@ -117,7 +121,6 @@ a {
 
   &:hover {
     color: var(--secondary-color);
-    text-decoration: underline;
   }
 }
 
