--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -8,7 +8,7 @@
 
 .header {
   // ...
-  &__flex-container {
+  &__container {
     // ...
   }
 
@@ -57,7 +57,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  &__flex-container {
+  &__container {
     // height: 100%;
     // max-height: 100vh;
     justify-content: center;
@@ -93,13 +93,13 @@
   display: flex;
   place-content: center;
   place-items: center;
-  place-self: center; // ...
+  place-self: center;
 
   &__title {
     // ...
   }
 
-  &__flex-container {
+  &__container {
     // ...
   }
 
@@ -139,7 +139,7 @@
 .about {
   // ...
 
-  &__flex-container {
+  &__container {
     // ...
   }
 }
@@ -151,7 +151,7 @@
 .footer {
   // ...
 
-  &__flex-container {
+  &__container {
     // ...
   }
 }
