--- a/assets/styles/scss/abstracts/mixins/_wireframes.scss
+++ b/assets/styles/scss/abstracts/mixins/_wireframes.scss
@@ -1,8 +1,12 @@
 // -----------------------------------------------------------------------------
-// *  Wireframes
+// +  Wireframes
 // -----------------------------------------------------------------------------
 
 // - With HTML data attributes
+
+// -----------------------------------------------------------------------------
+// *  Wireframes with HTML data attributes
+// -----------------------------------------------------------------------------
 
 [data-wf] {
   position: relative;
@@ -12,7 +16,7 @@
 
 [data-wf]::before {
   position: absolute;
-  z-index: 8675309;
+  z-index: 99;
   top: 0;
   right: 0;
   bottom: 0;
@@ -20,27 +24,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(
-      to top right,
-      transparent calc(50% - 1px),
-      var(--wireframe--wire) calc(50% - 1px),
-      var(--wireframe--wire) calc(50% + 1px),
-      transparent calc(50% + 1px)
-    ),
-    linear-gradient(
-      to bottom right,
-      transparent calc(50% - 1px),
-      var(--wireframe--wire) calc(50% - 1px),
-      var(--wireframe--wire) calc(50% + 1px),
-      transparent calc(50% + 1px)
-    ),
+  background:
+    linear-gradient(to top right,
+    transparent calc(50% - 1px),
+    var(--wireframe--wire) calc(50% - 1px),
+    var(--wireframe--wire) calc(50% + 1px),
+    transparent calc(50% + 1px)),
+    linear-gradient(to bottom right,
+    transparent calc(50% - 1px),
+    var(--wireframe--wire) calc(50% - 1px),
+    var(--wireframe--wire) calc(50% + 1px),
+    transparent calc(50% + 1px)),
     var(--wireframe--bg-color);
   color: var(--wireframe--wire);
   content: attr(data-wf);
   font: bold 2em Jubilat, Georgia, serif;
-  text-shadow: 0 0 0.25em var(--wireframe--bg-color),
-    0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color),
-    0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color);
+  text-shadow:
+    0 0 0.25em var(--wireframe--bg-color),
+    0 0 0.25em var(--wireframe--bg-color),
+    0 0 0.25em var(--wireframe--bg-color),
+    0 0 0.25em var(--wireframe--bg-color),
+    0 0 0.25em var(--wireframe--bg-color);
 }
 
 // -  Automatic
