--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -40,3 +40,12 @@ img {
 // -  <<----------<< Specific >>---------->>
 
 // ...
+
+/* Set the size of the div element that contains the map */
+#map {
+  /* The height is 400 pixels */
+  width: 100%;
+  height: 400px;
+
+  /* The width is the width of the web page */
+}
