--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -26,7 +26,13 @@
 @import 'base/media';
 
 /* ========================================================================== *\
-+  PARTIAL SCSS GROUP 4 - `components/`
++  PARTIAL SCSS GROUP 4 - `layout/`
+\* ========================================================================== */
+@import 'layout/header';
+@import 'layout/footer';
+
+/* ========================================================================== *\
++  PARTIAL SCSS GROUP 5 - `components/`
 \* ========================================================================== */
 @import 'components/containers';
 @import 'components/card';
@@ -34,7 +40,7 @@
 @import 'components/mobile-menu';
 
 /* ========================================================================== *\
-+  PARTIAL SCSS GROUP 5 - `pages/`
++  PARTIAL SCSS GROUP 6 - `pages/`
 \* ========================================================================== */
 @import 'pages/index';
 @import 'pages/home';
@@ -45,7 +51,7 @@
 @import 'pages/storefront';
 
 /* ========================================================================== *\
-+  PARTIAL SCSS GROUP 6 - `themes/`
++  PARTIAL SCSS GROUP 7 - `themes/`
 \* ========================================================================== */
 @import 'themes/light';
 @import 'themes/dark';
