style-main: verified v5

--- a/assets/styles/scss/abstracts/_configs.scss
+++ b/assets/styles/scss/abstracts/_configs.scss
@@ -3,8 +3,13 @@
 // -----------------------------------------------------------------------------
 
 /* -------------------------------------------------------------------------- *\
--  Wireframe
+*  Wireframe
 \* -------------------------------------------------------------------------- */
 
-$enabled--wireframe-manual: true;
-$enabled--wireframe-automatic: true;
+// - <<----------<< Automatic >>---------->>
+
+@include automatic-wireframes(true);
+
+// - <<----------<< Manual >>---------->>
+
+@include manual-wireframes(false);
