--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -8,38 +8,59 @@ html {
 }
 
 /* -------------------------------------------------------------------------- *\
--  Wireframe
+-  (1) Content Sectioning
 \* -------------------------------------------------------------------------- */
-[data-wf] {
+/* -------------------------------------------------------------------------- *\
+-  (2) Text Content
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+-  (3) Inline text Semantics
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+-  (4) Image and Multimedia
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+-  (5) Embedded Content
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+-  (6) SVG and MathML
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+-  (7) Scripting
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+-  (8) Demarcating Edits
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+-  (9) Table Content
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+-  (10) Forms
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+-  (11) Interactive Elements
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+-  (12) Web Components
+\* -------------------------------------------------------------------------- */
+@media (prefers-reduced-motion: no-preference) {
+  :root {
+    scroll-behavior: smooth;
+  }
+}
+
+.full-width {
   position: relative;
-  z-index: 1;
-  outline: calc(0.25rem / 2) solid var(--wireframe--wire);
+  right: 50%;
+  left: 50%;
+  width: 100vw;
+  margin-right: -50vw;
+  margin-left: -50vw;
 }
 
-[data-wf]::before {
-  position: absolute;
-  z-index: 99;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background: linear-gradient(to top right, transparent calc(50% - 1px), var(--wireframe--wire) calc(50% - 1px), var(--wireframe--wire) calc(50% + 1px), transparent calc(50% + 1px)), linear-gradient(to bottom right, transparent calc(50% - 1px), var(--wireframe--wire) calc(50% - 1px), var(--wireframe--wire) calc(50% + 1px), transparent calc(50% + 1px)), var(--wireframe--bg-color);
-  color: var(--wireframe--wire);
-  content: attr(data-wf);
-  font: bold 2em Jubilat, Georgia, serif;
-  text-shadow: 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color);
-}
-
-address,
+/* -------------------------------------------------------------------------- *\
+*  Wireframe
+\* -------------------------------------------------------------------------- */
 article,
 aside,
 footer,
@@ -54,7 +75,7 @@ main,
 nav,
 section,
 div {
-  outline: calc(0.25rem / 2) red dashed;
+  outline: calc(0.5rem / 8) red ridge;
 }
 
 blockquote,
@@ -96,21 +117,6 @@ video,
 time,
 span {
   outline: calc(0.25rem / 4) blue dashed;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  :root {
-    scroll-behavior: smooth;
-  }
-}
-
-.full-width {
-  position: relative;
-  right: 50%;
-  left: 50%;
-  width: 100vw;
-  margin-right: -50vw;
-  margin-left: -50vw;
 }
 
 /* ========================================================================== *\
