--- a/assets/styles/scss/base/_layout.scss
+++ b/assets/styles/scss/base/_layout.scss
@@ -143,4 +143,6 @@ footer {
 
 // #  <<<----------<< Specific >>---------->>
 
-// ...
+// -----------------------------------------------------------------------------
+
+
