style-main: verified v6

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -7,42 +7,6 @@ html {
   --wireframe--wire: #f00;
 }
 
-/* -------------------------------------------------------------------------- *\
--  (1) Content Sectioning
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (2) Text Content
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (3) Inline text Semantics
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (4) Image and Multimedia
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (5) Embedded Content
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (6) SVG and MathML
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (7) Scripting
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (8) Demarcating Edits
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (9) Table Content
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (10) Forms
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (11) Interactive Elements
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  (12) Web Components
-\* -------------------------------------------------------------------------- */
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: smooth;
@@ -61,6 +25,7 @@ html {
 /* -------------------------------------------------------------------------- *\
 *  Wireframe
 \* -------------------------------------------------------------------------- */
+address,
 article,
 aside,
 footer,
@@ -73,9 +38,8 @@ h5,
 h6,
 main,
 nav,
-section,
-div {
-  outline: calc(0.5rem / 8) red ridge;
+section {
+  outline: calc(0.5rem / 1) red solid;
 }
 
 blockquote,
@@ -90,33 +54,114 @@ ol,
 p,
 pre,
 ul {
-  outline: calc(0.25rem / 3) green dashed;
+  outline: calc(0.5rem / 1) red solid;
 }
 
 a,
+abbr,
+b,
+bdi,
+bdo,
 br,
-button,
 cite,
 code,
-datalist,
+data,
+dfn,
 em,
 i,
-input,
-img,
-label,
+kbd,
 mark,
+q,
+rb,
+rp,
+rt,
+rtc,
+ruby,
+s,
+samp,
+small,
+strong,
+sub,
+sup,
+time,
+ul,
+var,
+wbr {
+  outline: calc(0.5rem / 1) red solid;
+}
+
+area,
+audio,
+img,
+map,
+track,
+video {
+  outline: calc(0.5rem / 1) red solid;
+}
+
+embed,
+iframe,
+object,
+param,
+picture,
+source {
+  outline: calc(0.5rem / 1) red solid;
+}
+
+svg,
+math {
+  outline: calc(0.5rem / 1) red solid;
+}
+
+canvas {
+  outline: calc(0.5rem / 1) red solid;
+}
+
+del,
+ins {
+  outline: calc(0.5rem / 1) red solid;
+}
+
+caption,
+col,
+colgroup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+tr {
+  outline: calc(0.5rem / 1) red solid;
+}
+
+button,
+datalist,
+fieldset,
+form,
+input,
+label,
+legend,
 meter,
+optgroup,
+option,
 output,
 progress,
-q,
 select,
-svg,
-textarea,
-u,
-video,
-time,
-span {
-  outline: calc(0.25rem / 4) blue dashed;
+textarea {
+  outline: calc(0.5rem / 1) red solid;
+}
+
+details,
+dialog,
+menu,
+summary {
+  outline: calc(0.5rem / 1) red solid;
+}
+
+slot,
+template {
+  outline: calc(0.5rem / 1) red solid;
 }
 
 /* ========================================================================== *\
@@ -171,16 +216,6 @@ body {
 /* -------------------------------------------------------------------------- *\
 -  Forms
 \* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  Table
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
--  Footer
-\* -------------------------------------------------------------------------- */
-footer {
-  background-color: rgba(70, 130, 180, 0.5);
-}
-
 /* -------------------------------------------------------------------------- *\
 *  _typography.scss: This partial file contains all application-wide 'typography'.
 \* -------------------------------------------------------------------------- */
